--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ body{
     font-family: 'Lato' ,sans-serif;
     font-size: 1.6rem;
     font-weight: 400;
-    
 
 }
 a{
@@ -39,7 +38,6 @@ button{
 .row{
     max-width: 114rem;
      width: 100%;
-     
     position: absolute;
     top: 50%;
     left: 50%;
@@ -63,18 +61,20 @@ button{
     background-color: white;
     border-radius: 1rem;
     overflow: hidden;
-    max-height: 70rem;
     min-height: 56rem;
     position: relative;
 }
 /* card style */
 .figure{
     /* background-color: black; */
-    min-height: 17rem;
+    max-width: 100%;
+    /* width: 100%; */
+    height: 27rem;
     margin-bottom: 1rem;
 }
 .img{
-    min-height:17rem;
+    /* min-height:17rem; */
+    height: 100%;
     width: 100%;
     object-fit: cover;
 }
@@ -97,6 +97,7 @@ button{
 }
 .description{
     padding: 0 1.5rem;
+    margin-bottom: 5rem;
 }
 .heading_secondary{
     text-transform: capitalize;
@@ -107,24 +108,23 @@ button{
 .card_text{
     color: rgb(70, 66, 66);
     text-align: justify;
-    margin-bottom: 6rem;
+    margin-bottom: 4rem;
 }
 .information{
-    margin-bottom: 3rem;
-    
+    /* margin-bottom: 3rem; */
     position: absolute;
     left: 1rem;
-    bottom: 0;
+    bottom: .5rem;
 }
 
 .fig_person{
     display: inline-block;
-    min-height: 5rem;
+    height: 5rem;
     color: black;
     max-width: 5rem;
 }
 .img2{
-    min-height: 5rem;
+    height: 100%;
     width: 100%;
     border-radius: 50%;
 }
@@ -155,7 +155,25 @@ span{
     }
 }
 @media (max-width:785px){
-    .col-1-of-3:last-child{
-        float: none;
+    .col-1-of-3{
+        width: 100%;
+        margin-top: 1rem;
+        margin-right: 0 !important;
     }
+    .parent{
+        min-height: 140vh;
+    }
+   
+
+    .row{
+        max-width: 60rem;
+    }
+
+}
+
+@media (max-width:400px){
+    
+   .row{
+    max-width: 40rem;
+   }
 }
